# ml_ops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  HF1_Encord_Datahandling.py  README.md  compose.yaml  pyproject.toml
annotation_pipeline/configs/cloud_annotation/: data_pull.yaml  data_push.yaml
annotation_pipeline/db/: README.md
annotation_pipeline/scripts/: data_pull.py  data_push.py  pairs_lookup.py  send_lookup_to_chat.py  send_plot_to_chat.py  store_pairs_lookup.py
annotation_pipeline/scripts/data-handling/: create_testing_index.py  data_sanity_check.py
annotation_pipeline/scripts/slack/: send_plot_to_chat.py
annotation_pipeline/scripts/testing/: README.md  test_query.py  test_reader.py  test_savefile.py  upload_file2bucket.py
annotation_pipeline/utils/: encord_utils.py  gcloud_utils.py  hydra_helpers.py  job_processor.py  path_utils.py
data_pipeline/: README.md
data_pipeline/configs/cloud_annotation/: data_pull.yaml  data_push.yaml
data_pipeline/db/: README.md
data_pipeline/scripts/: data_pull.py  data_push.py  data_sanity_check.py  pairs_lookup.py  send_lookup_to_chat.py  send_plot_to_chat.py  store_pairs_lookup.py
data_pipeline/scripts/testing/: test_query.py  test_reader.py
data_pipeline/utils/: cube_utils.py  db_queries.py  db_utils.py  encord_utils.py  gcloud_utils.py  job_processor.py  path_utils.py  slack_utils.py  viz_utils.py
